[B] Fix course list action list being covered

--- a/app/assets/stylesheets/partials/_components_tables.scss
+++ b/app/assets/stylesheets/partials/_components_tables.scss
@@ -64,7 +64,6 @@
     }
   }
   thead th, th, td {
-    overflow: hidden;
     @include respond($baikal) {
       font-size: $kappa;
     }
